# lovejs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.js  xmake.lua
.github/workflows/: ci.yml
cmake/: README.md  googletest.cmake  libuv.cmake  qjs.cmake  quickjs.cmake  sdl2.cmake  sdl2_image.cmake  sdl3.cmake  sokol.cmake  thread_pool.cmake  uvw.cmake
docs/: Callbacks.md  Fs.md  Graphics.md  Net.md  README.md  回调驱动.md
examples/: basic_shapes.js  fs_demo.js  hello.js  particles.js  test_text.js
examples/game/: gomoku.js  snap.js  tetris.js
examples/test_import/: main.js  utils.js
examples/use_qjs/: CMakeLists.txt  main.cc
src/: main.cpp
src/async/: AsyncRuntime.hpp  TaskSystem.hpp
src/cli/: cli_runner.cc  cli_runner.h  main.cc
src/core/: AppLoop.hpp  Embed.hpp  GameLoop.hpp  JSEngine.hpp  SDLManager.hpp
src/module/: init.hpp
src/module/fs/: FsAsync.hpp  init.hpp
src/module/graphics/: Color.hpp  Font.hpp  Graphics.hpp  JSBindings.hpp  Math.hpp  Renderer.hpp  Texture.hpp  init.hpp
src/native/: CMakeLists.txt  README.md  default_plugins.h  native_modules.cmake
src/native/console/: README.md  console_module.cc  console_module.h  console_plugin.h
src/native/fs/: README.md  fs_async.h  fs_async_schedule.h  fs_js_io.h  fs_module.cc  fs_module.h  fs_ops.cc  fs_stat_js.cc  fs_stat_js.h  fs_sync.cc  fs_sync.h  fs_uv.cc  fs_uv.h
src/native/net/: README.md  net_module.cc  net_module.h  net_uv.cc  net_uv.h
src/native/process/: README.md  process_module.cc  process_module.h
src/native/timers/: README.md  timers_module.cc  timers_module.h
src/render/: IRenderer.hpp  Render.hpp  SDLRenderer.hpp  SokolRenderer.hpp  Types.hpp
src/runtime/: embed.h  headless_runtime.h  runtime_context.h  script_host.h
src/runtime/async/: async_runtime.h
src/runtime/event_loop/: event_loop.cc  event_loop.h
tests/: CMakeLists.txt  README.md  embed_test.cc
tests/cli/: cli_test.cc
tests/runtime/: embed_test.cc  runtime_context_test.cc
